--- a/src/App.css
+++ b/src/App.css
@@ -2,30 +2,13 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+.seachField{
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.center-navbar {
+  width: 100%;
+  padding-left: 30%;
 }
 
 @keyframes App-logo-spin {
@@ -35,4 +18,12 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.child {
+  margin: 10px;
+}
+
+.photos{
+  margin-top: 5%;
 }
